<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ff3847"
                android:padding="10dp"
                android:text="@string/iron_man"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large.Inverse" />

            <LinearLayout
                android:animateLayoutChanges="true"
                android:id="@+id/linearLayout"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:scaleType="fitXY"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/todo" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp">

                    <TableRow>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/real_name" />

                        <TextView
                            android:id="@+id/textViewRealName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tony_stark"
                            android:textStyle="bold" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/team" />

                        <TextView
                            android:id="@+id/textViewTeam"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/avengers"
                            android:textStyle="bold" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/first_appearance" />

                        <TextView
                            android:id="@+id/textViewFirstAppearance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_1974"
                            android:textStyle="bold" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/created_by" />

                        <TextView
                            android:id="@+id/textViewCreatedBy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/stan_lee"
                            android:textStyle="bold" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/publisher" />

                        <TextView
                            android:id="@+id/textViewPublisher"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/marvel_comics"
                            android:textStyle="bold" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/bio" />

                        <TextView
                            android:id="@+id/textViewBio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="textMultiLine"
                            android:text="@string/steven_rogers_was_born_in_the_lower_east_side_of_manhattan_new_york_city_in_1925_to_poor_irish_immigrants_sarah_and_joseph_rogers_54_joseph_died_when_steve_was_a_child_and_sarah_died_of_pneumonia_while_steve_was_a_teen_by_early_1940_before_america_s_entry_into_world_war_ii_rogers_is_a_tall_scrawny_fine_arts_student_specializing_in_illustration_and_a_comic_book_writer_and_artist"
                            android:textStyle="bold" />
                    </TableRow>

                </TableLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>
